# SlicerDenseCorrespondenceAnalysis

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: claude.yml
DeCA/: DeCA.py
docs/: KD-fast-correspondence-eval.md
docs/data/: analysis1_pc_correlations.csv  analysis1_per_specimen.csv  analysis2_joint_deltas.csv
